--- a/python-template/template/catalog-info.yaml
+++ b/python-template/template/catalog-info.yaml
@@ -2,9 +2,10 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.app_name}}
-  description: test python app.
+  description: Python app that displays basic infos - named ${{values.app_name}}.
   annotations:
      github.com/project-slug: limbuhimal/${{values.app_name}}
+     backstage.io/techdocs-ref: dir:.
 
 spec:
   type: service
