--- a/python-template/template/catalog-info.yaml
+++ b/python-template/template/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: ${{values.app_name}}
   description: Python app that displays basic infos - named ${{values.app_name}}.
   annotations:
-     github.com/project-slug: limbuhimal/${{values.app_name}}
+     github.com/project-slug: limbuhimal-1/${{values.app_name}}
      backstage.io/techdocs-ref: dir:.
 
 spec:
